# ai-scientist-guards

./: README.md
Monte_Carlo_validation/: ai-scientist-validation.cabal
Monte_Carlo_validation/app/: Main.hs
Monte_Carlo_validation/src/: Lord.hs  Protocol.hs  ResearchMonad.hs  Simulator.hs  Validator.hs
SVM case study/: ai-scientist-case-study.cabal  create_datasets.py  prompt.json  seed_ideas.json
SVM case study/app/: Main.hs
SVM case study/baseline/: experiment.py
SVM case study/data/: wine_exploration.csv  wine_validation.csv
SVM case study/src/: AgentLoop.hs  Executor.hs  LLMCoder.hs  Lord.hs  Protocol.hs  ResearchMonad.hs  Scaffold.hs  Workspace.hs
SVM case study/workspace_casestudy/H0001_Scaffold_1/: implementation.py
SVM case study/workspace_casestudy/H0002_Scaffold_2/: implementation.py
SVM case study/workspace_casestudy/H0003_Scaffold_3/: harness.py  implementation.py
SVM case study/workspace_casestudy/H0004_Scaffold_4/: implementation.py
SVM case study/workspace_casestudy/H0005_Scaffold_5/: implementation.py
