cabal-version:      3.0
name:               ai-scientist-validation
version:            0.1.0.0
license:            BSD-3-Clause
author:             Anonymous
maintainer:         anonymous@example.com
build-type:         Simple

common shared-properties
    default-language: Haskell2010
    ghc-options:      -Wall -O2
    build-depends:    base >=4.17 && <5

library
    import:           shared-properties
    exposed-modules:  Protocol
                    , Lord
                    , ResearchMonad
                    , Simulator
                    , Validator
    hs-source-dirs:   src
    build-depends:    mtl >=2.2.2
                    , vector >=0.12
                    , mwc-random >=0.15
                    , directory >=1.3
                    , filepath >=1.4

executable ai-scientist-validation
    import:           shared-properties
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    ai-scientist-validation
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
