cabal-version:      3.0
name:               ai-scientist-case-study
version:            0.1.0.0
license:            BSD-3-Clause
author:             Anonymous
maintainer:         anonymous@example.com
build-type:         Simple

common shared-properties
    default-language: Haskell2010
    ghc-options:      -Wall -O2
    build-depends:    base >=4.17 && <5

library
    import:           shared-properties
    exposed-modules:  Protocol
                    , Lord
                    , ResearchMonad
                    , Workspace
                    , LLMCoder
                    , AgentLoop
                    , Executor
                    , Scaffold
    hs-source-dirs:   src
    build-depends:    mtl >=2.2.2
                    , vector >=0.12
                    , mwc-random >=0.15
                    , directory >=1.3
                    , filepath >=1.4
                    , text >=1.2
                    , aeson >=2.0
                    , bytestring >=0.11
                    , req >=3.0
                    , process >=1.6
                    , math-functions >=0.3

executable ai-scientist-case-study
    import:           shared-properties
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    ai-scientist-case-study
                    , vector >=0.12
                    , text >=1.2
                    , directory >=1.3
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

